<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context="com.example.android.popularmovieappstageone.MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView style="@style/ShadowThemeTwo">

                <ImageView
                    android:id="@+id/img_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/movie_poster_text"
                    android:scaleType="fitXY" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_movie_title_text"
                    style="@style/ShadowThemeOne"
                    android:text="@string/movie_title_text" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    style="@style/TextViewOne" />

                <TextView
                    android:id="@+id/tv_release_date_text"
                    style="@style/ShadowThemeOne"
                    android:text="@string/movie_release_date_text" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/TextViewOne" />

                <TextView
                    android:id="@+id/tv_movie_vote_average_text"
                    style="@style/ShadowThemeOne"
                    android:text="@string/movie_vote_average_text" />

                <TextView
                    android:id="@+id/tv_movie_vote_average"
                    style="@style/TextViewOne" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_movie_overview_text"
            style="@style/ShadowThemeOne"
            android:text="@string/movie_overview_text" />

        <TextView
            android:id="@+id/tv_movie_overview"
            style="@style/TextViewOne" />
    </LinearLayout>
</ScrollView>